<resources>
    <string name="app_name">돈씨</string>
    <string name="empty"></string>
    <string name="app_version">현재 버전 %s</string>
    <string name="new_version"> (최신 버전 %s)</string>
    <string name="use_new_version">최신 버전 이용중</string>
    <string name="search_hint">검색 힌트</string>
    <string name="server_error">서버와의 연결에 오류가 발생했습니다.</string>
    <string name="error_network">네트워크 에러입니다.다시 시도해 주세요</string>
    <string name="bottom_nav_home">홈</string>
    <string name="bottom_nav_store">상점</string>
    <string name="bottom_nav_charge">충전소</string>
    <string name="bottom_nav_my">마이</string>
    <string name="ok">확인</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="setting">설정</string>
    <string name="complete">완료</string>
    <string name="receipt">접수</string>
    <string name="region">지역</string>
    <string name="weather">날씨</string>
    <string name="theme">테마</string>
    <string name="theme_choice">테마 선택</string>
    <string name="theme_preview">테마 미리보기 &gt;</string>
    <string name="theme_select">테마 적용 &gt;</string>
    <string name="theme_apply">적용중</string>
    <string name="theme_apply2">적용하기</string>
    <string name="theme_subject_info">정보형 테마</string>
    <string name="theme_desc_info">한눈에 모든 정보를!\n날씨와 포인트를 한 화면에서 확인하세요.</string>
    <string name="theme_subject_simple">심플형 테마</string>
    <string name="theme_desc_simple">깔끔하고 직관적인 디자인!\n기본 정보만 간단하게 보여드립니다.</string>
    <string name="theme_subject_calendar">달력형 테마</string>
    <string name="theme_desc_calendar">날씨와 일정 관리를 한번에!\n캘린더와 함께 포인트를 확인하세요.</string>
    <string name="theme_subject_background">배경형 테마</string>
    <string name="theme_desc_background">아름다운 배경과 함께!\n멋진 배경화면 위에 날씨 정보를 표시 해드립니다.</string>
    <string name="theme_subject_video">영상형 테마</string>
    <string name="theme_desc_video">실감나는 영상으로!\n오늘의 날씨를 생동감 있게 느껴보세요.</string>
    <string name="app_fcm_channel_id">MoneyWeatherChannelId</string>
    <string name="app_fcm_channel_name">MoneyWeather</string>
    <string name="app_fcm_channel_push_id">MoneyWeatherPushlId</string>
    <string name="app_fcm_channel_push_name">알림</string>
    <string name="slide_text">밀어서 잠금해제 &gt;&gt;</string>
    <string name="error_try_later">잠시후 다시 시도해주시기 바랍니다.</string>
    <string name="don_see">돈씨</string>
    <string name="login_title1">날씨가 돈이 되는 순간, 돈씨</string>
    <string name="login_title2">돈씨와 함께라면</string>
    <string name="login_title3_1">날씨가 리워드 </string>
    <string name="login_title3_2">됩니다</string>
    <string name="login_kakao">카카오로 시작하기</string>
    <string name="login_naver">네이버로 시작하기</string>
    <string name="login_google">구글로 시작하기</string>
    <string name="email">이메일</string>
    <string name="login_email">이메일로 시작하기</string>
    <string name="login_guest">게스트로 시작하기&gt;</string>
    <string name="login_term_desc">SNS 계정으로 로그인하면 당사의 서비스 약관에 동의하고\n개인정보 처리 방침을 읽었음을 간주하는 것입니다.</string>
    <string name="id_input_hint">이메일을 입력하세요</string>
    <string name="pw">비밀번호</string>
    <string name="pw_confirm">비밀번호 확인</string>
    <string name="pw_input_hint">영문, 숫자 조합 8~32자</string>
    <string name="login">로그인</string>
    <string name="go_login">로그인하기</string>
    <string name="logout">로그아웃</string>
    <string name="signup">회원가입</string>
    <string name="new_signup">신규 회원가입</string>
    <string name="update">업데이트</string>
    <string name="app_update_message">앱 업데이트가 완료되었습니다.</string>
    <string name="about_us">회사소개</string>
    <string name="privacy">개인정보처리방침</string>
    <string name="terms_of_location">위치기반서비스이용약관</string>
    <string name="terms">이용약관</string>
    <string name="business_information">사업자정보확인</string>
    <string name="search_id">아이디 찾기</string>
    <string name="search_pw">비밀번호 찾기</string>
    <string name="wrong_id">아이디가 다릅니다. 확인 후 다시 시도해주세요.</string>
    <string name="wrong_pw">비밀번호 다릅니다. 확인 후 다시 시도해주세요.</string>
    <string name="save_email">이메일 저장</string>
    <string name="prev_return">&lt;첫 화면으로 돌아가기</string>
    <string name="next">다음</string>
    <string name="prev">이전</string>
    <string name="input_user_info">회원정보를\n입력해주세요.</string>
    <string name="name">이름</string>
    <string name="sir"> 님</string>
    <string name="name_input_hint">이름을 입력해 주세요</string>
    <string name="pno_input_hint">-없이 번호 입력</string>
    <string name="phone_num">휴대폰 번호</string>
    <string name="name_empty_error">이름을 입력해주세요</string>
    <string name="pno_empty_error">휴대폰 번호를 입력해주세요</string>
    <string name="find_id_error">입력하신 정보로 아이디를 찾을 수 없습니다.</string>
    <string name="find_id_complete">입력하신 정보로\n아이디를 찾았어요.</string>
    <string name="id_email">아이디(이메일)</string>
    <string name="find_id_complete_desc">개인정보는 일부 가려진 채 표시됩니다.</string>
    <string name="find_pw_desc">가입한 메일로\n인증코드가 발송 됩니다.</string>
    <string name="sign_email">가입한 이메일</string>
    <string name="send_auth_code">인증코드 발송</string>
    <string name="find_code_desc">메일에서 인증 코드를\n확인해 주세요.</string>
    <string name="find_code_desc2">발송된 메일에서 인증 코드를 입력하면\n인증이 진행됩니다.</string>
    <string name="code_input">코드입력</string>
    <string name="code_input_hint">코드를 입력해 주세요.</string>
    <string name="code_hint">코드를 입력해 주세요.</string>
    <string name="cert_complete">인증완료</string>
    <string name="cert_success">인증 완료되었습니다.</string>
    <string name="reset_pw_desc">비밀번호를\n재설정해 주세요.</string>
    <string name="new_password">새 비밀번호</string>
    <string name="new_password_hint">영문 및 숫자 포함하여 입력해 주세요.</string>
    <string name="new_password_confirm">새 비밀번호 확인</string>
    <string name="new_password_confirm_hint">비밀번호를 재입력해 주세요</string>
    <string name="not_same_pw">입력하신 비밀번호가 동일하지 않습니다.</string>
    <string name="new_pw_complete_desc">비밀번호 설정을\n완료했어요.</string>
    <string name="new_pw_complete_desc2">새롭게 설정한 비밀번호로\n로그인이 필요합니다.</string>
    <string name="move_login">로그인하러 가기&gt;</string>
    <string name="email_input_error">영문,숫자,빼기(-),밑줄(_),마침표(.)만 사용할 수 있어요.(단, 특수기호는 처음과 끝에 또는 연속으로 사용 불가)</string>
    <string name="pw_input_error">영문, 숫자 조합 8~32자로 입력해 주세요.</string>
    <string name="pw_input_confirm_error">비밀번호가 일치하지 않아요.</string>
    <string name="recommend_input">추천인 코드(선택)</string>
    <string name="recommend_input_hint">추천인 코드를 입력해 주세요(선택)</string>
    <string name="recommend_input2">추천인 코드</string>
    <string name="recommend_input_hint2">추천인 코드를 입력해 주세요</string>
    <string name="recommend_button">포인트 받기</string>
    <string name="certified">본인인증</string>
    <string name="phone_certified">본인인증하기&gt;</string>
    <string name="phone_certified2">본인인증하기</string>
    <string name="phone_certified_completed">본인인증완료</string>
    <string name="certified_msg">해당 서비스 이용시 본인인증을 필수로 받으셔야 합니다.</string>
    <string name="all_agree">모두 동의</string>
    <string name="all_agree_add">(선택 항목 포함)</string>
    <string name="signup_agree_1">(필수)만 14세 이상입니다.</string>
    <string name="signup_agree_2">(필수)이용약관 동의</string>
    <string name="signup_agree_3">(필수)개인정보처리방침동의</string>
    <string name="signup_agree_4">(선택)SMS 광고 및 마케팅 이용 동의</string>
    <string name="signup_agree_5">(선택)이메일 광고 및 마케팅 이용 동의</string>
    <string name="see">보기</string>
    <string name="signup_fail">인증을 완료할 수 없어요.</string>
    <string name="signup_fail_desc">다른 계정에서 인증한 휴대폰 번호입니다.\n동일한 휴대폰 번호로는 인증이 불가합니다.</string>
    <string name="signup_complete">환영해요</string>
    <string name="signup_complete_desc">오늘의 날씨로\n포인트를 받아보세요!</string>
    <string name="signup_start">시작하기&gt;</string>
    <string name="npay_shop">N페이샵</string>
    <string name="coupon_shop">쿠폰샵</string>
    <string name="modify_info">정보수정</string>
    <string name="more_see2">더보기</string>
    <string name="more_see">더보기 &gt;</string>
    <string name="menu">메뉴</string>
    <string name="withdraw">탈퇴하기</string>
    <string name="withdraw_desc">마지막으로 확인해 주세요!</string>
    <string name="withdraw_info1">회원탈퇴 하시면 포인트, 쿠폰이 소멸되고 복구가 불가능합니다.</string>
    <string name="withdraw_info2">재가입후 본인인증은 30일 이후부터 가능하며, 재가입시 기존 정보는 복구되지 않습니다.</string>
    <string name="withdraw_agree">탈퇴 시 주의사항에 동의합니다.</string>
    <string name="withdraw_user">회원탈퇴 &gt;</string>
    <string name="logout_msg">정말 로그아웃하시겠어요?</string>
    <string name="logout_desc">로그아웃 후 게스트로 적립된 포인트는 신규 회원 가입시에만 보장됩니다.</string>
    <string name="invate">친구초대</string>
    <string name="invate_code_copy">초대코드 복사하기</string>
    <string name="invate_friend">친구 초대하기&gt;</string>
    <string name="invate_input_friend_code">친구 코드입력 &gt;</string>
    <string name="invate_completed">참여 완료</string>
    <string name="invate_desc1">돈씨를 친구에게 알려주세요!\n지금 친구를 초대하면,</string>
    <string name="invate_desc2">내가 받는 혜택</string>
    <string name="invate_desc3">초대한 당신</string>
    <string name="invate_desc4">1000포인트 보너스!</string>
    <string name="invate_desc5">친구가 받는 혜택</string>
    <string name="invate_desc6">초대받은 친구</string>
    <string name="invate_desc7">1000포인트 웰컴기프트!</string>
    <string name="invate_info_title1">이용 안내 사항</string>
    <string name="invate_info_desc1">친구에게 초대 링크를 공유합니다.</string>
    <string name="invate_info_desc2">초대를 통해 친구가 신규 회원가입 시 추천코드를 입력합니다.</string>
    <string name="invate_info_desc3">나와 친구 모두에게 1,000캐시가 적립됩니다.</string>
    <string name="invate_info_title2">추가 안내</string>
    <string name="invate_info_desc4">친구가 신규가입자인 경우에만 캐시가 지급이 됩니다.</string>
    <string name="invate_info_desc5">캐시 적립은 최대 20명까지 가능합니다.</string>
    <string name="invate_info_desc6">부적절한 방법으로 포인트를 적립한 회원은 캐시 적립이 취소됩니다.</string>
    <string name="invate_dialog_verification_message">본인 인증 후 친구 코드 입력이 가능합니다.</string>
    <string name="invate_dialog_verification_button">본인 인증 하기</string>
    <string name="invate_dialog_input_code">친구 코드를 입력해주세요.</string>
    <string name="invate_dialog_hint">친구 코드 입력</string>
    <string name="my_point">나의 포인트</string>
    <string name="usage_detail">이용내역</string>
    <string name="max_day">(최대 10일)</string>
    <string name="all">전체</string>
    <string name="accumulate">적립</string>
    <string name="use">사용</string>
    <string name="use_list_empty">이용 내역이 없어요</string>
    <string name="use_point">- %sP</string>
    <string name="degrees">˚</string>
    <string name="percent">%</string>
    <string name="than_yesterday">어제보다</string>
    <string name="same_yesterday">어제와 같음</string>
    <string name="high">높음</string>
    <string name="low">낮음</string>
    <string name="degrees_han">도</string>
    <string name="hour">시</string>
    <string name="cur_pos">현재 위치</string>
    <string name="success_write">등록되었습니다.</string>
    <string name="invite_success">친구 코드 입력하여 포인트를 획득하였습니다.</string>
    <string name="invite_fail">잘못된 추천인 코드입니다.</string>
    <string name="my_total_point_title">총 포인트</string>
    <string name="my_enable_point_title">사용 가능 포인트</string>
    <string name="than_yesterday_more">전일보다 %.1f도 %s</string>
    <string name="than_yesterday_more2">어제보다 %.1f° %s</string>
    <string name="than_yesterday_more3">어제보다 %d° %s</string>
    <string name="than_yesterday_same">전일과 같아요</string>
    <string name="than_yesterday_same2">어제와 같음</string>
    <string name="high_arrow">↑</string>
    <string name="low_arrow">↓</string>
    <string name="min_and_max_temp">%s/%s</string>
    <string name="temp_high">높아요</string>
    <string name="temp_low">낮아요</string>
    <string name="fine_dust">미세먼지</string>
    <string name="ultra_dust">초미세먼지</string>
    <string name="hourly_weather">시간별 날씨</string>
    <string name="popup_permission_title">돈씨 서비스 이용을 위해 아래\n접근권한의 허용이 필요합니다</string>
    <string name="popup_permission_content">위 접근권한은 더 나은 서비스를 제공하기 위해 사용됩\n니다. 허용에 동의하지 않으셔도 돈씨를 이용하실 수 있\n으나 일부 서비스의 이용이 제한될 수 있습니다.</string>
    <string name="popup_permission_location_title">위치</string>
    <string name="popup_permission_location_content">(선택) 현 위치 날씨 표시, 날씨 안내</string>
    <string name="popup_permission_phone_title">전화</string>
    <string name="popup_permission_phone_content">(선택) 휴대폰 단말기 식별에 이용</string>
    <string name="popup_permission_noti_title">알림</string>
    <string name="popup_permission_noti_content">(선택) 공지 및 이벤트 알림</string>
</resources>