<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="27dp"
            android:layout_marginRight="18dp"
            android:gravity="center"
            android:lineSpacingExtra="1.57dp"
            android:text="@string/popup_permission_title"
            android:textColor="@color/grey_222"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/permissionInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="34dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/titleTV">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popup_permission_location_title"
                    android:textColor="@color/grey_222"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/popup_permission_location_content"
                    android:textColor="@color/grey_222"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popup_permission_phone_title"
                    android:textColor="@color/grey_222"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/popup_permission_phone_content"
                    android:textColor="@color/grey_222"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popup_permission_noti_title"
                    android:textColor="@color/grey_222"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/popup_permission_noti_content"
                    android:textColor="@color/grey_222"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="34dp"
            android:layout_marginBottom="18dp"
            android:background="@color/line_color_2"
            app:layout_constraintTop_toBottomOf="@+id/permissionInfo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:lineSpacingExtra="1.5dp"
            android:text="@string/popup_permission_content"
            android:textColor="@color/greyish_brown"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>