<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.moneyweather.viewmodel.ResetPwViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

        <include
            android:id="@+id/iActionBar"
            layout="@layout/view_common_action_bar" />


        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_medium"
            android:layout_marginTop="@dimen/default_side_margin"
            android:fontFamily="@font/spoqa_han_sans_neo_bold"
            android:includeFontPadding="false"
            android:text="@string/reset_pw_desc"
            android:textColor="@color/grey_222"
            android:textSize="24dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintTop_toBottomOf="@+id/iActionBar"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/newPw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_medium"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/spoqa_han_sans_neo_medium"
            android:includeFontPadding="false"
            android:text="@string/new_password"
            android:textColor="@color/grey_222"
            android:textSize="14dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintTop_toBottomOf="@+id/desc"
            app:layout_constraintStart_toStartOf="parent"
            />


        <com.moneyweather.ui.HCEditText
            android:id="@+id/editPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_medium"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="@dimen/space_medium"
            app:hint="@string/new_password_hint"
            app:inputType="textPassword"
            app:imeOptions="actionNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newPw" />

        <TextView
            android:id="@+id/newPwConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_medium"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/spoqa_han_sans_neo_medium"
            android:includeFontPadding="false"
            android:text="@string/new_password_confirm"
            android:textColor="@color/grey_222"
            android:textSize="14dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintTop_toBottomOf="@+id/editPassword"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.moneyweather.ui.HCEditText
            android:id="@+id/editPasswordConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xlarge"
            app:hint="@string/new_password_confirm_hint"
            app:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/editPassword"
            app:layout_constraintStart_toStartOf="@+id/editPassword"
            app:layout_constraintTop_toBottomOf="@+id/newPwConfirm" />


        <TextView
            android:id="@+id/pno_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_medium"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/spoqa_han_sans_neo_medium"
            android:includeFontPadding="false"
            android:textColor="@color/main_red"
            android:textSize="14dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintTop_toBottomOf="@+id/editPasswordConfirm"
            app:layout_constraintStart_toStartOf="parent"
            />


        <Button
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:enabled="false"
            android:background="@drawable/selector_find_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>