<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.moneyweather.viewmodel.InviteFriendViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_two">

        <include
            android:id="@+id/iActionBar"
            layout="@layout/view_common_action_bar" />

        <TextView
            android:id="@+id/recommend_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_medium"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/spoqa_han_sans_neo_medium"
            android:includeFontPadding="false"
            android:text="@string/recommend_input2"
            android:textColor="@color/grey_222"
            android:textSize="16sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iActionBar" />

        <com.moneyweather.ui.HCEditText
            android:id="@+id/recommend_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_medium"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="@dimen/space_medium"
            app:hint="@string/recommend_input_hint2"
            app:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recommend_title" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:background="@drawable/selector_find_button"
            android:enabled="false"
            android:text="@string/recommend_button"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>