<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.moneyweather.viewmodel.FindIdViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

        <include
            android:id="@+id/iActionBar"
            layout="@layout/view_common_action_bar" />


            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_medium"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/spoqa_han_sans_neo_bold"
                android:includeFontPadding="false"
                android:text="@string/signup_fail"
                android:textColor="@color/grey_222"
                android:textSize="24dp"
                app:layout_constrainedWidth="true"
                app:layout_constraintTop_toBottomOf="@+id/iActionBar"
                app:layout_constraintStart_toStartOf="parent"
                 />

        <TextView
            android:id="@+id/idEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_medium"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/spoqa_han_sans_neo_medium"
            android:includeFontPadding="false"
            android:text="@string/signup_fail_desc"
            android:textColor="@color/grey_74"
            android:textSize="14dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintTop_toBottomOf="@+id/desc"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:enabled="true"
            android:background="@drawable/selector_find_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>